Fix overfull \hbox

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -39,9 +39,9 @@
 
 @inproceedings{wasm_speedyjs,
   author    = {Reiser, Micha and Bl\"{a}ser, Luc},
-  title     = {Accelerate JavaScript Applications by Cross-Compiling to WebAssembly},
+  title     = {Accelerate JavaScript applications by cross-compiling to WebAssembly},
   year      = {2017},
-  isbn      = {9781450355193},
+  isbn      = {978-1-4503-5519-3},
   publisher = {Association for Computing Machinery},
   address   = {New York, NY, USA},
   url       = {https://doi.org/10.1145/3141871.3141873},
